tests/baselines/reference/unusedLocalsAndParameters.errors.txt
tests/cases/compiler/unusedLocalsAndParameters.ts(5,12): error TS6133: 'a' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(10,22): error TS6133: 'a' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(16,5): error TS6133: 'farrow' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(16,15): error TS6133: 'a' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(19,7): error TS6133: 'C' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(21,12): error TS6133: 'a' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(24,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/unusedLocalsAndParameters.ts(24,11): error TS6133: 'v' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(28,5): error TS6133: 'E' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(30,12): error TS6133: 'a' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(33,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/unusedLocalsAndParameters.ts(33,11): error TS6133: 'v' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(39,12): error TS6133: 'a' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(42,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/unusedLocalsAndParameters.ts(42,11): error TS6133: 'v' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(49,10): error TS6133: 'i' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(53,10): error TS6133: 'i' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(57,17): error TS6133: 'n' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(64,11): error TS6133: 'c' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(69,11): error TS6133: 'a' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(72,11): error TS6133: 'c' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(75,11): error TS6133: 'c' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(80,11): error TS6133: 'N' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(81,9): error TS6133: 'x' is declared but never used.


==== tests/cases/compiler/unusedLocalsAndParameters.ts (24 errors) ====
    
    export { };
    
    // function declaration paramter
    function f(a) {
               ~
!!! error TS6133: 'a' is declared but never used.
    }
    f(0);
    
    // function expression paramter
    var fexp = function (a) {
                         ~
!!! error TS6133: 'a' is declared but never used.
    };
    
    fexp(0);
    
    // arrow function paramter
    var farrow = (a) => {
        ~~~~~~
!!! error TS6133: 'farrow' is declared but never used.
                  ~
!!! error TS6133: 'a' is declared but never used.
    };
    
    class C {
          ~
!!! error TS6133: 'C' is declared but never used.
        // Method declaration paramter
        method(a) {
               ~
!!! error TS6133: 'a' is declared but never used.
        }
        // Accessor declaration paramter
        set x(v: number) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
              ~
!!! error TS6133: 'v' is declared but never used.
        }
    }
    
    var E = class {
        ~
!!! error TS6133: 'E' is declared but never used.
        // Method declaration paramter
        method(a) {
               ~
!!! error TS6133: 'a' is declared but never used.
        }
        // Accessor declaration paramter
        set x(v: number) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
              ~
!!! error TS6133: 'v' is declared but never used.
        }
    }
    
    var o = {
        // Object literal method declaration paramter
        method(a) {
               ~
!!! error TS6133: 'a' is declared but never used.
        },
        // Accessor declaration paramter
        set x(v: number) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
              ~
!!! error TS6133: 'v' is declared but never used.
        }
    };
    
    o;
    
    // in a for..in statment
    for (let i in o) {
             ~
!!! error TS6133: 'i' is declared but never used.
    }
    
    // in a for..of statment
    for (let i of [1, 2, 3]) {
             ~
!!! error TS6133: 'i' is declared but never used.
    }
    
    // in a for. statment
    for (let i = 0, n; i < 10; i++) {
                    ~
!!! error TS6133: 'n' is declared but never used.
    }
    
    // in a block
    
    const condition = false;
    if (condition) {
        const c = 0;
              ~
!!! error TS6133: 'c' is declared but never used.
    }
    
    // in try/catch/finally
    try {
        const a = 0;
              ~
!!! error TS6133: 'a' is declared but never used.
    }
    catch (e) {
        const c = 1;
              ~
!!! error TS6133: 'c' is declared but never used.
    }
    finally {
        const c = 0;
              ~
!!! error TS6133: 'c' is declared but never used.
    }
    
    
    // in a namespace
    namespace N {
              ~
!!! error TS6133: 'N' is declared but never used.
        var x;
            ~
!!! error TS6133: 'x' is declared but never used.
    }
    
        